# edu-ai-workshop-mcp

./: .gitignore  README.md  claude_desktop_config.json  codespace-configure-mcp.md  codespaces.md  get-mcp-url.sh  mcp-client-configuration.md  mcp_client_interface.py  pyproject.toml  setup-env.sh  setup-mcp-remote.sh  troubleshooting-guide.md
.devcontainer/: Dockerfile  devcontainer.json  install-claude.sh  setup-all.sh  setup-claude.sh  setup-python.sh  setup.sh  start-services.sh
.github/: CODEOWNERS
exercise/01_Making_MCP_Tools_Durable/: README.md
exercise/01_Making_MCP_Tools_Durable/practice/: worker.py
exercise/01_Making_MCP_Tools_Durable/practice/mcp_servers/: server.py
exercises/01_Making_MCP_Tools_Durable/: README.md
exercises/01_Making_MCP_Tools_Durable/practice/: activities.py  workflows.py
exercises/01_Making_MCP_Tools_Durable/solution/: activities.py  worker.py  workflows.py
exercises/01_Making_MCP_Tools_Durable/solution/mcp_servers/: weather.py
exercises/02_MCP_Temporal_HITL/: README.md
exercises/02_MCP_Temporal_HITL/practice/: worker.py  workflows.py
exercises/02_MCP_Temporal_HITL/solution/: activities.py  worker.py  workflows.py
exercises/02_MCP_Temporal_HITL/solution/mcp_servers/: invoice.py
mcp_servers/: invoice.py  weather.py
notebooks/: 01_MCP_Temporal_Intro.ipynb  01_MCP_Temporal_Intro.ipynb.backup  02_MCP_Temporal_HITL.ipynb
notebooks/01_MCP_Temporal_Intro_Solution/: 01_MCP_Temporal_Solution.ipynb  02_MCP_Temporal_HITL_Solution.ipynb  __init__.py  activity_solution.py  buggy_activity_solution.md  fixed_activity_solution.py  mcp_server_solution.py  removed_exception_activity_solution.py  workflow_solution.py
notebooks/02_MCP_Temporal_HITL_Solution/: 02_MCP_Temporal_HITL_Solution.ipynb  durable-timer-solution.py  invoice-status-query-solution.py  process-invoice-solution.py  query-tool-solution.py  reject-invoice-signal-solution.py  reject-invoice-tool-solution.py  solution2.py  solution3.py  solution4.py  worker-solution.py
notebooks/solutions/: __init__.py  activity_solution.py  mcp_server_solution.py  workflow_solution.py
